Add Timeout & LogLevel

--- a/template/default/console/console_login.html
+++ b/template/default/console/console_login.html
@@ -57,6 +57,13 @@
             </div>
             <br />
             <br />
+            <div class="input-control text full-size" data-role="input">
+                <span class="mif-linux prepend-icon"></span>
+                <input type="text" name="vm_id" id="vm_cid" placeholder="请输入容器ID">
+                <button class="button helper-button clear"><span class="mif-cross"></span></button>
+            </div>
+            <br />
+            <br />
             <div class="form-actions">
                 <span id="login-box-msg" class="tag alert"></span>
                 <button type="submit" class="button primary place-right">登&nbsp;&nbsp;陆</button>
